--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       </li>
       </ul>
     </nav>
+    <address>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </address>
   </header>
+  
   </body>
 </html>
