--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +10,7 @@
       <nav>
       <ul>
         <li>
-          <a href="">Web Studio</a>
+          <a href=""><span>Web</span> Studio</a>
         </li>
       <li>
         <a href="">Студия</a>
@@ -28,6 +28,57 @@
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </address>
   </header>
-  
+  <main>
+    <!-- Hero -->
+<section>
+  <h1>Эффективные решения для вашего бизнеса</h1>
+  <button>Заказать услугу</button>
+</section>
+<!-- Преимущества -->
+<section>
+  <ul>
+  <li>
+    <img src="./images/satelite.svg" alt="сателитарная антенна">
+    <h3>Внимание к деталям</h3>
+    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+  </li>
+  <li>
+    <img src="./images/clock.svg" alt="часы">
+        <h3>Пунктуальность</h3>
+    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+  </li>
+  <li>
+    <img src="./images/diagram.svg" alt="диаграмма">
+    <h3>Планирование</h3>
+    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+  </li>
+  <li>
+    <img src="./images/astronaut.svg" alt="астронавт">
+    <h3>Современные технологии</h3>
+    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+  </li>
+</ul>
+</section>
+<!-- Что мы делаем -->
+<section>
+  <h2>Чем мы занимаемся</h2>
+  <ul>
+    <li>
+      <img src="./images/laptop.jpg" alt="ноутбук">
+      <p>Десктопные приложения</p>
+    </li>
+    <li>
+      <img src="./images/smartphone.jpg" alt="смартфон">
+      <p>Мобильные приложения</p>
+    </li>
+    <li>
+      <img src="./images/monitor.jpg" alt="монитор">
+      <p>Дизайнерские решения</p>
+    </li>
+  </ul>
+</section>
+<section></section>
+<section></section>
+  </main>
   </body>
 </html>
