--- a/index.html
+++ b/index.html
@@ -77,7 +77,56 @@
     </li>
   </ul>
 </section>
-<section></section>
+<!-- Наша команда -->
+<section>
+  <h2>Наша команда</h2>
+  <ul>
+    <li>
+      <img src="./images/Николай Кучеренко.jpg" alt="Дизайнер продукта">
+      <h3>Николай Кучеренко</h3>
+      <p lang="en">Product Designer</p>
+      <ul>
+        <li><a href="" aria-label="инстаграм"><img src="./images/instagram.svg" alt="инстаграм"></a></li>
+        <li><a href="" aria-label="твиттер"><img src="./images/twitter.svg" alt="твиттер"></a></li>
+        <li><a href="" aria-label="фейсбук"><img src="./images/facebook.svg" alt="фейсбук"></a></li>
+        <li><a href="" aria-label="линкедин"><img src="./images/linkedin.svg" alt="линкедин"></a></li>
+      </ul>
+    </li>
+    <li>
+      <img src="./images/Ольга Иванова.jpg" alt="фронтенд разработчик">
+      <h3>Ольга Иванова</h3>
+      <p lang="en">Frontend Developer</p>
+      <ul>
+        <li><a href="" aria-label="инстаграм"><img src="./images/instagram.svg" alt="инстаграм"></a></li>
+        <li><a href="" aria-label="твиттер"><img src="./images/twitter.svg" alt="твиттер"></a></li>
+        <li><a href="" aria-label="фейсбук"><img src="./images/facebook.svg" alt="фейсбук"></a></li>
+        <li><a href="" aria-label="линкедин"><img src="./images/linkedin.svg" alt="линкедин"></a></li>
+      </ul>
+    </li>
+    <li>
+      <img src="./images/Андрей Шевченко.jpg" alt="маркетолог">
+      <h3>Андрей Шевченко</h3>
+      <p lang="en">Marketing</p>
+      <ul>
+       <li><a href="" aria-label="инстаграм"><img src="./images/instagram.svg" alt="инстаграм"></a></li>
+        <li><a href="" aria-label="твиттер"><img src="./images/twitter.svg" alt="твиттер"></a></li>
+        <li><a href="" aria-label="фейсбук"><img src="./images/facebook.svg" alt="фейсбук"></a></li>
+        <li><a href="" aria-label="линкедин"><img src="./images/linkedin.svg" alt="линкедин"></a></li>
+      </ul>
+    </li>
+    <li>
+      <img src="./images/Иван Николаев.jpg" alt="проэктировщик пользовательского интерфейса">
+      <h3>Иван Николаев</h3>
+      <p lang="en">UI Designer</p>
+      <ul>
+        <li><a href="" aria-label="инстаграм"><img src="./images/instagram.svg" alt="инстаграм"></a></li>
+        <li><a href="" aria-label="твиттер"><img src="./images/twitter.svg" alt="твиттер"></a></li>
+        <li><a href="" aria-label="фейсбук"><img src="./images/facebook.svg" alt="фейсбук"></a></li>
+        <li><a href="" aria-label="линкедин"><img src="./images/linkedin.svg" alt="линкедин"></a></li>
+      </ul>
+    </li>
+  </ul>
+</section>
 <section></section>
   </main>
   </body>
