--- a/index.html
+++ b/index.html
@@ -127,7 +127,16 @@
     </li>
   </ul>
 </section>
-<section></section>
+<!-- Постоянные клиенты -->
+<section>
+<h2></h2>
+  <a href="" aria-label="логотип1"><img src="./images/ya-and-co.svg" alt="логотип1"></a>
+  <a href="" aria-label="логотип2"><img src="./images/company-tagline-here.svg" alt="логотип2"></a>
+  <a href="" aria-label="логотип3"><img src="./images/company.svg" alt="логотип3"></a>
+  <a href="" aria-label="логотип4"><img src="./images/foster-peters.svg" alt="логотип4"></a>
+  <a href="" aria-label="логотип5"><img src="./images/brand.svg" alt="логотип5"></a>
+  <a href="" aria-label="логотип6"><img src="./images/company-tagline.svg" alt="логотип6"></a>
+</section>
   </main>
   </body>
 </html>
